compiler/tests/success/x86-64/fences.jazz
export fn test_lfence() { () = #LFENCE(); }
export fn test_mfence() { () = #MFENCE(); }
export fn test_sfence() { () = #SFENCE(); }
