compiler/tests/fail/common/typealias_notfound.jazz
export fn test() {
    reg regtype x;
}